# tasks-ml

./: README.md
task1/: README.md  main.py  tests.py
task2/: README.md
task2/modeling/: .flake8  Makefile  README.md  pyproject.toml
task2/modeling/notebooks/: EDA.ipynb  dataset.ipynb  predict.ipynb
task2/modeling/src/: predict.py  test.py  torch2onnx.py  train.py
task2/modeling/src/configs/: base.py  config.py  utils.py
task2/modeling/src/data/: datamodule.py
task2/modeling/src/model/: autoencoder.py  model.py
